infra/k8s/auth-depl.yaml
# run with kubectl apply -f auth-deply.yaml
apiVersion: apps/v1 #note apps/
kind: Deployment
metadata:
  name: auth-depl # just for logging etc
spec:
  replicas: 1 # number of pods to create
  selector: # which pods to manage
    matchLabels:
      app: auth # app is not special, just a key-value pair
  template: # pods to create
    metadata:
      labels:
        app: auth # will now match with selector above
    spec: # pod specs
      containers:
        - name: auth
          # specifiying version below so doesn't reach to docker hub for latest
          image: robertamccullough/gittix-auth
          # image: us.gcr.io/ticketing-dev-411519/auth
--- # 3 dashes to start defining a new object
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  type: ClusterIP # optional because this is default service
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
