infra/k8s/ticketing-depl.yaml
# run with kubectl apply -f auth-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing
  template:
    metadata:
      labels:
        app: ticketing
    spec:
      containers:
        - name: ticketing
          image: robertamccullough/gittix-ticketing
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-srv
spec:
  selector:
    app: ticketing
  ports:
    - name: ticketing
      protocol: TCP
      port: 3000
      targetPort: 3000
