infra/k8s/ticketing-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-mongo
  template:
    metadata:
      labels:
        app: ticketing-mongo
    spec:
      containers:
        - name: ticketing-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: auth-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
